[package]
name = "littlefs-rust"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib.rs"

[[test]]
name = "basic_test"
path = "tests/basic_test.rs"

[[example]]
name = "demo"
path = "examples/demo.rs"

[features]
default = []
lfs_no_malloc = []
lfs_no_assert = []
lfs_no_debug = []
lfs_no_warn = []
lfs_no_error = []
lfs_trace = []

[dependencies]
